test/scc/expr/semantic-errors/123.t
void test()
{
    int a[100] = { [99] = 0, 1 };
}